[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(460, 320)
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SelectCharacter"
horizontal_alignment = 1

[node name="Characters" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CharacterA" type="Button" parent="CenterContainer/VBoxContainer/Characters"]
layout_mode = 2
text = "RapidShooter"

[node name="CharacterB" type="Button" parent="CenterContainer/VBoxContainer/Characters"]
layout_mode = 2
text = "HeavyGunner"

[node name="Detail" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Detail"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
